@@ -301,6 +301,8 @@
   border: 1px solid #555555;
   font-size: small;
   margin-right: 5px;
+  padding-left: 0;
+  padding-right: 0;
 }
 .kwrapper .kconfiguration, .kfatalwrapper-outer .kconfiguration {
   padding: 0;
